--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "scope-chart",
+  "homepage": "https://keikeu.github.io/scope-chart",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +11,7 @@
     "@types/node": "^16.18.96",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
+    "gh-pages": "^6.1.1",
     "highcharts": "^11.4.1",
     "highcharts-react-official": "^3.2.1",
     "react": "^18.2.0",
@@ -19,6 +21,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
